fix overflow issues in project details page

--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -34,6 +34,23 @@
 
 /* media queries for tablet screens */
 @media screen and (max-width: 1024px) {
+  .skills {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 2px solid navajowhite; */
+    width: 90%;
+  }
+  .skills li {
+    border-right: none;
+  }
+  .skills li {
+    /* margin-right: 5px; */
+    font-size: 15px;
+  }
+  .skills li p {
+    display: inline-block;
+  }
 }
 
 /* media queries for mobile screens */
@@ -43,7 +60,7 @@
     align-items: center;
     justify-content: center;
     /* border: 2px solid navajowhite; */
-    width: 96%;
+    width: 90%;
   }
   .skills li {
     border-right: none;
