--- a/src/sections/footer/footer.css
+++ b/src/sections/footer/footer.css
@@ -10,7 +10,7 @@ footer {
   display: grid;
   place-items: center;
   padding: 5rem 0;
-  height: auto;
+  /* height: auto; */
   overflow-y: hidden;
 }
 
@@ -99,7 +99,7 @@ footer {
 @media screen and (max-width: 1024px) {
   #footer {
     /* padding: 10px 0; */
-    height: auto;
+    /* height: auto; */
   }
   .footer__container {
     flex-direction: column;
